--- a/index.html
+++ b/index.html
@@ -7,39 +7,47 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Привіт! Я — починаючий Fullstack Developer</h1>
-      <p>
-        Створюю сучасні сайти, верстаю з макетів у Figma та розвиваюся в
-        розробці веб-додатків
-      </p>
-    </header>
-
-    <section>
-      <h2>Про мене</h2>
-      <p>
-        Мене звати [Твоє ім’я]. Я проходжу курси Fullstack Developer і вже
-        створюю повноцінні сайти, адаптовані під всі пристрої. Вмію працювати з
-        Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
-      </p>
+    <section class="container">
+      <header>
+        <div>
+          <h1>Fullstack Developer</h1>
+          <p>
+            Привіт! Я — починаючий Fullstack Developer Створюю сучасні сайти,
+            верстаю з макетів у Figma та розвиваюся в розробці веб-додатків
+          </p>
+        </div>
+      </header>
     </section>
 
-    <section>
+    <section class="container">
+      <div>
+        <h2>Про мене</h2>
+        <p>
+          Мене звати [Твоє ім’я]. Я проходжу курси Fullstack Developer і вже
+          створюю повноцінні сайти, адаптовані під всі пристрої. Вмію працювати
+          з Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
+        </p>
+      </div>
+    </section>
+
+    <section class="container">
       <h2>Навички</h2>
-      <ul>
-        <li>
-          <strong>Фронтенд:</strong> HTML5, CSS3, JavaScript, адаптивна верстка,
-          робота з Figma
-        </li>
-        <li>
-          <strong>Бекенд:</strong> Node.js, Express.js, MongoDB / PostgreSQL (в
-          процесі вивчення)
-        </li>
-        <li><strong>Інструменти:</strong> Git, GitHub, VS Code</li>
-      </ul>
+      <div>
+        <ul>
+          <li>
+            <strong>Фронтенд:</strong> HTML5, CSS3, JavaScript, адаптивна
+            верстка, робота з Figma
+          </li>
+          <li>
+            <strong>Бекенд:</strong> Node.js, Express.js, MongoDB / PostgreSQL
+            (в процесі вивчення)
+          </li>
+          <li><strong>Інструменти:</strong> Git, GitHub, VS Code</li>
+        </ul>
+      </div>
     </section>
 
-    <section>
+    <section class="container">
       <h2>Проєкти</h2>
       <div class="project">
         <h3>Назва проєкту 1</h3>
@@ -55,7 +63,7 @@
       </div>
     </section>
 
-    <section class="contact">
+    <section class="container">
       <h2>Контакти</h2>
       <a href="mailto:your@email.com">your@email.com</a>
       <a href="https://t.me/your_username">@your_username</a>
