--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   </head>
   <body>
     <section class="container">
-      <header>
+      <header class="fullstack">
         <div>
           <h1>Fullstack Developer</h1>
-          <p>
+          </div>
+      </header>
+    </section>
+    <section>
+          <h2>
             Привіт! Я — починаючий Fullstack Developer Створюю сучасні сайти,
             верстаю з макетів у Figma та розвиваюся в розробці веб-додатків
-          </p>
+          </h2>
         </div>
-      </header>
     </section>
 
     <section class="container">
