--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div>
         <h2>Про мене</h2>
         <p>
-          Мене звати [Твоє ім’я]. Я проходжу курси Fullstack Developer і вже
+          Мене звати Віталій. Я проходжу курси Fullstack Developer і вже
           створюю повноцінні сайти, адаптовані під всі пристрої. Вмію працювати
           з Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
         </p>
