--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <section class="container">
       <header class="fullstack">
-        <div>
+        <div class="header-fullstack">
           <h1>Fullstack Developer</h1>
           </div>
       </header>
     </section>
-    <section>
+    <section class="container">
           <h2>
             Привіт! Я — починаючий Fullstack Developer Створюю сучасні сайти,
             верстаю з макетів у Figma та розвиваюся в розробці веб-додатків
@@ -50,21 +50,35 @@
       </div>
     </section>
 
-    <section class="container">
-      <h2>Проєкти</h2>
-      <div class="project">
-        <h3>Назва проєкту 1</h3>
-        <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
-        <p>Технології: HTML, CSS, JavaScript</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </div>
-      <div class="project">
-        <h3>Назва проєкту 2</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </div>
-    </section>
+<section class="container">
+  <h2>Проєкти</h2>
+  <ul class="project-list">
+    <li class="project">
+      <h3>Назва проєкту 1</h3>
+      <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
+      <p>Технології: HTML, CSS, JavaScript</p>
+      <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+    </li>
+    <li class="project">
+      <h3>Назва проєкту 2</h3>
+      <p>Опис: веб-додаток із використанням Node.js.</p>
+      <p>Технології: HTML, CSS, JS, Node.js</p>
+      <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+    </li>
+    <li class="project">
+      <h3>Назва проєкту 3</h3>
+      <p>Опис: веб-додаток із використанням Node.js.</p>
+      <p>Технології: HTML, CSS, JS, Node.js</p>
+      <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+    </li>
+    <li class="project">
+      <h3>Назва проєкту 4</h3>
+      <p>Опис: веб-додаток із використанням Node.js.</p>
+      <p>Технології: HTML, CSS, JS, Node.js</p>
+      <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+    </li>
+  </ul>
+</section>
 
     <section class="container">
       <h2>Контакти</h2>
