--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 
     <section class="container">
       <h2>Контакти</h2>
-      <a href="mailto:your@email.com">your@email.com</a>
-      <a href="https://t.me/your_username">@your_username</a>
-      <a href="https://github.com/yourusername">github.com/yourusername</a>
-    </section>
+<div>
+        <a href="mailto:your@email.com">your@email.com</a>
+        <a href="https://t.me/your_username">@your_username</a>
+        <a href="https://github.com/yourusername">github.com/yourusername</a>
+      </section>
+</div>
   </body>
 </html>
