--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <header class="section-header">
-        <!-- Логотип + текст PRODUCT -->
+        <!-- Логотип + текст FullStack -->
        <div class="container container-header">
           <div class="logo">
             <button
@@ -28,10 +28,11 @@
           <!-- Навігація -->
           <nav class="menu">
             <ul class="menu-list">
-              <li><a href="./index.html" class="menu-link">Product</a></li>
-              <li><a href="#pricing" class="menu-link">Pricing</a></li>
-              <li><a href="#customers" class="menu-link">Customers</a></li>
-              <li><a href="#resources" class="menu-link">Resources</a></li>
+              <li><a href="./index.html" class="menu-link">Fullstack</a></li>
+              <li><a href="#pricing" class="menu-link">Навички</a></li>
+              <li><a href="#my-work" class="menu-link">Мої роботи</a></li>
+              <li><a href="#figma" class="menu-link">Макети фігма</a></li>
+              <li><a href="#telefon-mail" class="menu-link">Звязок</a></li>
             </ul>
           </nav>
   
