--- a/index.html
+++ b/index.html
@@ -7,77 +7,76 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-      <header class="section-header">
-        <!-- Логотип + текст FullStack -->
-       <div class="container container-header">
-          <div class="logo">
-            <button
-              type="button"
-              class="main-logo-button-svg"
-              title="logo"
-              id="buttonlogo"
-              aria-label="buttonlogo"
-            >
-              <svg class="svg-logo" width="40" height="36">
-                <use href="./images/icons.svg#icon-fullstack1"></use>
-              </svg>
-            </button>
-            <a href="./index.html" class="main-logo-text">Fullstack</a>
-          </div>
-  
-          <!-- Навігація -->
-          <nav class="menu">
-            <ul class="menu-list">
-              <li><a href="./index.html" class="menu-link">Fullstack</a></li>
-              <li><a href="#pricing" class="menu-link">Навички</a></li>
-              <li><a href="#my-work" class="menu-link">Мої роботи</a></li>
-              <li><a href="#figma" class="menu-link">Макети фігма</a></li>
-              <li><a href="#telefon-mail" class="menu-link">Звязок</a></li>
-            </ul>
-          </nav>
-  
-          <!-- Кнопки входу -->
-          <div class="auth-buttons">
-            <button type="button" class="sign-in" aria-label="sign-in">
-              Sign In
-            </button>
-            <button type="button" class="sign-up" aria-label="sign-up">
-              Sign Up
-            </button>
-          </div>
-          <!-- Бургер-меню -->
+    <header class="section-header">
+      <!-- Логотип + текст FullStack -->
+      <div class="container container-header">
+        <div class="logo">
           <button
             type="button"
-            class="burger-menu"
-            title="burger"
-            id="button-burger"
-            aria-label="button-burger"
+            class="main-logo-button-svg"
+            title="logo"
+            id="buttonlogo"
+            aria-label="buttonlogo"
           >
-            <svg class="burger-menu-icon" width="28" height="31">
-              <use href="./images/icons.svg#burger-menu"></use>
+            <svg class="svg-logo" width="40" height="36">
+              <use href="./images/icons.svg#icon-fullstack1"></use>
             </svg>
           </button>
+          <a href="./index.html" class="main-logo-text">Fullstack</a>
         </div>
-       </div>
-      </header>
-      <main>
 
-<section class="main-foto">
-  <div class="container container-main-foto">
-<h1>Fullstack Developer</h1>
-  </div>
-</section>
+        <!-- Навігація -->
+        <nav class="menu">
+          <ul class="menu-list">
+            <li><a href="./index.html" class="menu-link">Fullstack</a></li>
+            <li><a href="#pricing" class="menu-link">Навички</a></li>
+            <li><a href="#my-work" class="menu-link">Мої роботи</a></li>
+            <li><a href="#figma" class="menu-link">Макети фігма</a></li>
+            <li><a href="#telefon-mail" class="menu-link">Звязок</a></li>
+          </ul>
+        </nav>
 
-    <section class="section-one">
-                <div class="container container-section-one">
-<div>
+        <!-- Кнопки входу -->
+        <div class="auth-buttons">
+          <button type="button" class="sign-in" aria-label="sign-in">
+            Sign In
+          </button>
+          <button type="button" class="sign-up" aria-label="sign-up">
+            Sign Up
+          </button>
+        </div>
+        <!-- Бургер-меню -->
+        <button
+          type="button"
+          class="burger-menu"
+          title="burger"
+          id="button-burger"
+          aria-label="button-burger"
+        >
+          <svg class="burger-menu-icon" width="28" height="31">
+            <use href="./images/icons.svg#burger-menu"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
+    <main>
+      <section class="main-foto">
+        <div class="container container-main-foto">
+          <h1>Fullstack Developer</h1>
+        </div>
+      </section>
+
+      <section class="section-one">
+        <div class="container container-section-one">
+          <div>
             <h2>
               Привіт! Я — починаючий Fullstack Developer Створюю сучасні сайти,
               верстаю з макетів Figma та розвиваюся в розробці веб-додатків
             </h2>
-</div>
+          </div>
           <div class="one-section-image-container">
-            <picture> фото на тему фулстек має бути
+            <picture>
+              фото на тему фулстек має бути
               <!-- Для великих екранів (1400px) -->
               <source
                 srcset="
@@ -102,111 +101,108 @@
             </picture>
           </div>
         </div>
-    </section>
+      </section>
 
-    <section class="section-two">
-      <div class="container container-section-two">
-        <h2>Про мене</h2>
-        <p>
-          Мене звати Віталій. Я проходжу курси Fullstack Developer і вже
-          створюю повноцінні сайти, адаптовані під всі пристрої. Вмію працювати
-          з Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
-        </p>
-      </div>
-    </section>
+      <section class="section-two">
+        <div class="container container-section-two">
+          <h2>Про мене</h2>
+          <p>
+            Мене звати Віталій. Я проходжу курси Fullstack Developer і вже
+            створюю повноцінні сайти, адаптовані під всі пристрої. Вмію
+            працювати з Figma, HTML, CSS, JavaScript, а також вивчаю бекенд.
+          </p>
+        </div>
+      </section>
 
-    <section class="section-three">
-      
-      <div class="container container-section-three">
-        <h2>Навички</h2>
-        <ul>
-          <li>
-            <strong>Фронтенд:</strong> HTML5, CSS3, JavaScript, адаптивна
-            верстка, робота з Figma
-          </li>
-          <li>
-            <strong>Бекенд:</strong> Node.js, Express.js, MongoDB / PostgreSQL
-            (в процесі вивчення)
-          </li>
-          <li><strong>Інструменти:</strong> Git, GitHub, VS Code</li>
-        </ul>
-      </div>
-    </section>
+      <section class="section-three">
+        <div class="container container-section-three">
+          <h2>Навички</h2>
+          <ul>
+            <li>
+              <strong>Фронтенд:</strong> HTML5, CSS3, JavaScript, адаптивна
+              верстка, робота з Figma
+            </li>
+            <li>
+              <strong>Бекенд:</strong> Node.js, Express.js, MongoDB / PostgreSQL
+              (в процесі вивчення)
+            </li>
+            <li><strong>Інструменти:</strong> Git, GitHub, VS Code</li>
+          </ul>
+        </div>
+      </section>
 
-<section class="section-four">
-<div class="container container-section-four">
-    <h2>Проєкти</h2>
-    <ul class="project-list">
-      <li class="project">
-        <h3>Назва проєкту 1</h3>
-        <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
-        <p>Технології: HTML, CSS, JavaScript</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-      <li class="project">
-        <h3>Назва проєкту 2</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-      <li class="project">
-        <h3>Назва проєкту 3</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-      <li class="project">
-        <h3>Назва проєкту 4</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-    </ul>
-</div>
-</section>
+      <section class="section-four">
+        <div class="container container-section-four">
+          <h2>Проєкти</h2>
+          <ul class="project-list">
+            <li class="project">
+              <h3>Назва проєкту 1</h3>
+              <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
+              <p>Технології: HTML, CSS, JavaScript</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+            <li class="project">
+              <h3>Назва проєкту 2</h3>
+              <p>Опис: веб-додаток із використанням Node.js.</p>
+              <p>Технології: HTML, CSS, JS, Node.js</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+            <li class="project">
+              <h3>Назва проєкту 3</h3>
+              <p>Опис: веб-додаток із використанням Node.js.</p>
+              <p>Технології: HTML, CSS, JS, Node.js</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+            <li class="project">
+              <h3>Назва проєкту 4</h3>
+              <p>Опис: веб-додаток із використанням Node.js.</p>
+              <p>Технології: HTML, CSS, JS, Node.js</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-<section class="section-five">
-<div class="container container-section-five">
-    <h2>Макети фігма</h2>
-    <ul class="project-list">
-      <li class="project">
-        <h3>Назва макету 1</h3>
-        <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
-        <p>Технології: HTML, CSS, JavaScript</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-      <li class="project">
-        <h3>Назва макету 2</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-      <li class="project">
-        <h3>Назва макету 3</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-      <li class="project">
-        <h3>Назва макету 4</h3>
-        <p>Опис: веб-додаток із використанням Node.js.</p>
-        <p>Технології: HTML, CSS, JS, Node.js</p>
-        <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
-      </li>
-    </ul>
-</div>
-</section>
-</main>
+      <section class="section-five">
+        <div class="container container-section-five">
+          <h2>Макети фігма</h2>
+          <ul class="project-list">
+            <li class="project">
+              <h3>Назва макету 1</h3>
+              <p>Опис: сайт з адаптивною версткою з макету Figma.</p>
+              <p>Технології: HTML, CSS, JavaScript</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+            <li class="project">
+              <h3>Назва макету 2</h3>
+              <p>Опис: веб-додаток із використанням Node.js.</p>
+              <p>Технології: HTML, CSS, JS, Node.js</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+            <li class="project">
+              <h3>Назва макету 3</h3>
+              <p>Опис: веб-додаток із використанням Node.js.</p>
+              <p>Технології: HTML, CSS, JS, Node.js</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+            <li class="project">
+              <h3>Назва макету 4</h3>
+              <p>Опис: веб-додаток із використанням Node.js.</p>
+              <p>Технології: HTML, CSS, JS, Node.js</p>
+              <p><a href="#">GitHub</a> | <a href="#">Live Demo</a></p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
     <footer class="section-fouter">
-      
-<div class="container container-section-fouter">
-  <h2>Контакти</h2>
+      <div class="container container-section-fouter">
+        <h2>Контакти</h2>
         <a href="mailto:your@email.com">your@email.com</a>
         <a href="https://t.me/your_username">@your_username</a>
         <a href="https://github.com/yourusername">github.com/yourusername</a>
-        </div>
-</fouter>
-
+      </div>
+    </footer>
   </body>
 </html>
