--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
               />
               <!-- Запасне зображення (для випадків, коли браузер не підтримує `picture`) -->
               <img
-                src="./images/amico(tel)1.jpg"
+                src="./images/blue-optic2.jpg"
                 alt="Amico Image"
-                width="338"
+                width="500"
                 height="310"
               />
             </picture>
