--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
           </div>
           <div class="one-section-image-container">
             <picture>
-              фото на тему фулстек має бути
               <!-- Для великих екранів (1400px) -->
               <source
                 srcset="
@@ -93,7 +92,7 @@
               />
               <!-- Запасне зображення (для випадків, коли браузер не підтримує `picture`) -->
               <img
-                src="./images/blue-optic2.jpg"
+                src="./images/programming-background.jpg"
                 alt="Amico Image"
                 width="500"
                 height="310"
