--- a/index.html
+++ b/index.html
@@ -176,6 +176,34 @@
           </ul>
         </div>
       </section>
+
+      <section class="section-designer">
+        <div class="container container-section-designer">
+          <h2>Макет сайту створив дизайнер</h2>
+          <div class="designer-content">
+            <img
+              src="./images/designer-avatar.jpg"
+              alt="Фото дизайнера"
+              class="designer-avatar"
+              width="150"
+              height="150"
+            />
+            <div class="designer-info">
+              <p><strong>Ім’я:</strong> Дизайнер Дизайнер</p>
+              <p>
+                <strong>Профіль Figma:</strong>
+                <a href="https://www.figma.com/@designer" target="_blank"
+                  >figma.com/@designer</a
+                >
+              </p>
+              <p>
+                <strong>Про макет:</strong> Сучасний і мінімалістичний дизайн
+                для портфоліо розробника, адаптований під усі екрани.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="section-fouter">
